2004-04-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el: Create w3m-load.el.
	(w3mhack-load-file): New variable.
	(w3mhack-examine-modules): Ignore `w3mhack-load-file'.
	(w3mhack-generate-load-file): New function.
	(w3mhack-compile): Call the above.

	* .cvsignore: Ignore w3m-load.el.

	* Makefile.in (clean): Remove w3m-load.el.

2004-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-prepare-article-markets):
	Don't show any text if the article seems to have been expired.

2004-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-expand-path-name): In Emacs, don't bind
	directory-sep-char which is an obsolete variable.

2004-04-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el, w3m-favicon.el: Move snippets managing
	`w3m-arrived-setup-functions' and `w3m-arrived-shutdown-functions'
	from w3m.el into w3m-favicon.el.

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-group-alist): Add
	blog.inoue and blog.watanabe.

2004-04-23  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el (w3m-antenna-hns-last-modified): Use 32400 as a
	correct timezone instead of JST (suggested by YAMAOKA-san).

2004-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el (shimbun-mainichi-prepare-article): Break
	long lines.

	* shimbun/shimbun.el (shimbun-make-date-string): Get a correct day
	of week even in the west side of Greenwich.

2004-04-22  Christian Schmitt  <Christian.Schmitt@Dresdner-Bank.com>

	* w3m.el (w3m-expand-path-name): Bind directory-sep-char to `?/'.
	It is `?\' by default in XEmacs on Windows (native, not Cygwin).

2004-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-symbol): Don't activate it in Emacs 20.  Advised
	by Arisawa-san.

2004-04-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Simplify the rule of sending referers.
	(w3m-add-referer-regexps): Abolished.
	(w3m-add-referer-predicate-function): Abolished.
	(w3m-add-referer): New option.